Fix HTML formatting and update logo image source

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <!-- 第一行：logo + 标题 -->
             <div class="header-title-row">
-                <img src="images/logo_up.png" alt="Group Logo" class="logo">
+                <img src="images/logo_up.PNG" alt="Group Logo" class="logo">
                 <h1>Vegetation And environMent remOte Sensing</h1>
             </div>
 
@@ -116,3 +116,4 @@
 
 </body>
 </html>
+
