Fix email addresses for Chenhui Guo
Updated contact information and corrected email addresses for Chenhui Guo.

--- a/members/PhDs/guo_chenhui.html
+++ b/members/PhDs/guo_chenhui.html
@@ -124,7 +124,8 @@
 
                 <div class="info-block">
                     <strong>Email:</strong><br>
-                    17839964260@163.com
+                    chenhuiguo86@gmail.com<br>
+                    c.guo@njnu.edu.cn
                 </div>
 
                 <div class="info-block">
@@ -174,4 +175,5 @@
     </footer>
 
 </body>
+
 </html>
